#######################################################################
# v0.13.6 (unreleased)
#######################################################################
New features:
- #367: Add --dns-only option to wadf-reprocess
- #375: Automatically generate required directories when deploying CGI configs

Bugs fixed:
- #355: Switching of local SVN checkouts fails if existing working copy is a
  subdirectory of a branch 

#######################################################################
# v0.13.5 (2010-05-20)
#######################################################################
Bugs fixed:
- #347: Further orphaned files after dependency installation due to use of 
  "pear install --force"

#######################################################################
# v0.13.4 (2010-04-28)
#######################################################################
Bugs fixed:
- #344: Deployment of an SVN dependency still uses peg revision format in 
  SVN 1.4
- #240: PHP config option values containing spaces aren't translated correctly
  into Apache vhost php_* options
- #346: When installing PEAR packages with dep tags, if the process involves a 
  forced downgrade, files from a future release may be left lying around
  
Changes/improvements:
- #325: wadf-list-macros highlights template files which are ignored 

#######################################################################
# v0.13.3 (2010-01-24)
#######################################################################
New features:
- #294: [Core] Support alternate hosts file format that doesn't duplicate the 
  local host name (useful for Mac OS X)
- #322: [Core] Add ability to force post-deploy removal of files, even if they 
  weren't templated

Changes/improvements:
- #320: [Core] When using mod_php the php.ini variables were set using
  php_admin_*, preventing runtime overload
- #298: [Core] Look at environment variables to fill @user@ macro where possible