@@ -4,10 +4,14 @@
 New features:
 - #367: Add --dns-only option to wadf-reprocess
 - #375: Automatically generate required directories when deploying CGI configs
+- #361: Set an environment variable to indicate the verbosity level when calling
+  kickstart/post-deploy scripts
 
 Bugs fixed:
 - #355: Switching of local SVN checkouts fails if existing working copy is a
   subdirectory of a branch 
+- #397: Incorrectly formatted dependency-tags file causes overwrite of the
+  client application
 
 #######################################################################
 # v0.13.5 (2010-05-20)
